<resources>
        <string name="app_name">Modul1</string>
        <string name="text_view">TextView</string>
        <string name="submit">Submit</string>
        <string name="notelp">No.Telepon</string>
        <string name="nama">Nama Pemilik</string>
        <string name="jnshewan">Jenis Hewan</string>
        <string name="deskripsi">Deskripsi</string>
        <string name="male">Jantan</string>
        <string name="female">Betina</string>
        <string name="gender">Jenis Kelamin</string>
        <string name="_10">10 tahun</string>
        <string name="uktubuh">Ukuran Tubuh</string>
        <string name="kecil">Kecil</string>
        <string name="sedang">Sedang</string>
        <string name="besar">Besar</string>
        <string name="title_activity_navbar">navbar</string>
        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="nav_header_title">Android Studio</string>
        <string name="nav_header_subtitle">android.studio@android.com</string>
        <string name="nav_header_desc">Navigation header</string>
        <string name="action_settings">Settings</string>
        <string name="cek_member">LIHAT DAFTAR MEMBER</string>
        <string name="add_member">TAMBAH LIST MEMBER</string>
        <string name="menu_home">Home</string>
        <string name="menu_gallery">Gallery</string>
        <string name="menu_slideshow">Slideshow</string>

</resources>